--- a/src/client/style.css
+++ b/src/client/style.css
@@ -6,23 +6,32 @@ body {
 h1, h2, p, ul, li {
   font-family: Helvetica, Arial, sans-serif;
 }
-
+.bali-img{
+width:200px;
+box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
+border-radius:5px;
+}
+.home-text{
+	padding:7px;
+}
 ul.header li {
     list-style-type: none;
     margin: 0;
     border-radius: 3px;
+	text-align: center;
 }
 
 
 ul.header {
-	background-color: #4b5267;
+	
 	padding: 0;
     padding 10px 0px;
 	border-radius: 3px;
-	box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
+	
+	
 }
 ul.header li a {
-  color: #FFF;
+  color: #4b5267;
   font-weight: bold;
   text-decoration: none;
     width:100%;
@@ -42,8 +51,9 @@ padding:20px;
 
 }
 .view{
-	background-color: #4b5267;
-    padding: 20px;
+	background-color: #dddbdd;
+    padding: 2px;
+	border-radius:2px;
 	box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 }
 .view-inner{
@@ -59,17 +69,18 @@ padding:20px;
   margin-bottom: 10px;
 }
 .active, ul.header li a.active:hover{
-  background-color: #efbcd5   
-  
+  color:#f9b1e7;
 }
 ul.header li a:hover{
-	background-color: #7c849b;
+  color:#f9b1e7;
 }
 .imageBoxStyle img {
 width:30%; 
 box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 vertical-align:top;
-
+}
+.image{
+	box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
 }
 .imageBoxStyle {
  display:inline;
@@ -86,35 +97,51 @@ vertical-align:top;
 }
 .bannerText {
 	font-size:2.2rem;
-	margin:28px;
+    margin-right: 12px;
 	background-color:white;
 	font-family: Helvetica, Arial, sans-serif;
 	border-radius:30px;
+	display:inline-block;
+	margin-left: 6px;
+    vertical-align: middle;
+	font-weight: 600;
 }
+.bannerText-top{
+	text-align:center;
+}
+.bannerText-bottom{
+	text-align:center;
+}
+div.no-padding{
+	padding:0px!important;
+}
+
 .img-circle {
     border-radius: 50%;	
 }
 .circle0{
-	height:60px;
+	height:50px;
 	margin-left:25px;
 }
 .circle1{
-	height:80px;
+	height:70px;
 	margin-left:25px;
 }
 .circle2{
-	height:100px;
-	margin-left:25px;
+	height:90px;
+	margin-right: 6px;
 
 }
 .circle3{
-	height:120px;
+	height:110px;
 	margin-left:25px;
 }
 .circle4{
-	height:140px;
+	height:120px;
 }
 .circles{
 	display:inline-block;
 	margin-bottom: 25px;
+	margin:auto;
+	 padding-left: 6px;
 }
